kubernetes-exercises/deployments-ingress/done/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
          name: quotes-flask-frontend
