kubernetes-exercises/deployments-ingress/done/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    run: frontend
  type: NodePort
